--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ accounts/accounts.js
 src/reference/*
 package-lock.json
 .DS_Store
-build-config.json
-/index.js
-/src
+# build-config.json
+# /index.js
+# /src
 app/accounts
 app/config
